kube-elasticsearch-cluster.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-ingress
spec:
  rules:
  - host: laz.dzervas.gr
    http:
      paths:
      - path: /elastic
        backend:
          serviceName: elasticsearch-es-http
          servicePort: 9200

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana-ingress
spec:
  rules:
  - host: laz.dzervas.gr
    http:
      paths:
      - path: /kibana
        backend:
          serviceName: kibana-kb-http
          servicePort: 5601

---
